THRIFT-3703 Unions Field Count Does Not Consider Map/Set/List Fields Client: Go Patch: D. Can Celasun <can@dcc.im>

This closes #1281